--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "animals",
   "version": "0.1.0",
+  "homepage": "https://github.com/luisDevops05/Animal-Show.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
